ucxclient-wrapper/ucxclient_wrapper_generated.h

/* Forward declaration */
typedef struct ucx_instance ucx_instance_t;
void ucx_wifi_RegisterStationNetworkUp(ucx_instance_t *inst, uUEWSNU_t callback);
void ucx_wifi_RegisterStationNetworkDown(ucx_instance_t *inst, uUEWSND_t callback);
void ucx_wifi_RegisterStationRoamingSwitchInitiated(ucx_instance_t *inst, uUEWSRSI_t callback);
void ucx_wifi_RegisterStationRoamingSwitchFailed(ucx_instance_t *inst, uUEWSRSF_t callback);
void ucx_wifi_RegisterStationRoamingSwitchCompleted(ucx_instance_t *inst, uUEWSRSC_t callback);
void ucx_wifi_RegisterApNetworkUp(ucx_instance_t *inst, uUEWAPNU_t callback);
void ucx_wifi_RegisterApNetworkDown(ucx_instance_t *inst, uUEWAPND_t callback);
void ucx_wifi_RegisterApUp(ucx_instance_t *inst, uUEWAPU_t callback);
void ucx_wifi_RegisterApDown(ucx_instance_t *inst, uUEWAPD_t callback);
void ucx_wifi_RegisterApStationAssociated(ucx_instance_t *inst, uUEWAPSA_t callback);
void ucx_wifi_RegisterApStationDisassociated(ucx_instance_t *inst, uUEWAPSDA_t callback);