ucx-avalonia-app/Services/UcxNativeGenerated.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_RegisterStationNetworkUp(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_RegisterStationNetworkDown(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_RegisterStationRoamingSwitchInitiated(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_RegisterStationRoamingSwitchFailed(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_RegisterStationRoamingSwitchCompleted(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_RegisterApNetworkUp(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_RegisterApNetworkDown(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_RegisterApUp(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_RegisterApDown(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_RegisterApStationAssociated(IntPtr instance, int callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ucx_wifi_RegisterApStationDisassociated(IntPtr instance, int callback);

        #endregion

    }
}